<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteGreen"
    tools:context=".MainActivity">


    <View
        android:id="@+id/whiteBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="133dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="279dp"
        android:layout_height="106dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/whiteBackground"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/whiteBackground"
        app:layout_constraintTop_toTopOf="@+id/whiteBackground" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/whiteBackground"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/whiteBackground"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/textForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgotPass"
        android:textColor="@color/linkText"
        app:layout_constraintEnd_toEndOf="@+id/whiteBackground"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="@+id/whiteBackground"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/whiteBackground"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/whiteBackground"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="177dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#4E848F"
        android:foregroundTint="#4E848F"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:cornerRadius="0dp"
        app:iconTint="#4E848F"
        app:layout_constraintBottom_toBottomOf="@+id/whiteBackground"
        app:layout_constraintEnd_toEndOf="@+id/whiteBackground"
        app:layout_constraintStart_toStartOf="@+id/whiteBackground"
        app:layout_constraintTop_toBottomOf="@+id/textForgotPass"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="#4E848F"
        app:strokeColor="#4E848F" />


</androidx.constraintlayout.widget.ConstraintLayout>